--- a/composer.json
+++ b/composer.json
@@ -20,8 +20,7 @@
 	"require": {
 		"php": ">=5.3.0",
 		"icanboogie/module-installer": "*",
-		"icanboogie/activerecord": "*",
-		"icybee/module-nodes": "*"
+		"icybee/module-nodes": "2.x"
 	},
 	"autoload": {
 		"classmap": [ "lib" ]
