Using icanboogie/http 2.1.x

--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,8 @@
 	"require": {
 		"php": ">=5.4.0",
 		"icanboogie/module-installer": "*",
+		"icanboogie/http": "2.1.x",
+		"icybee/module-registry": "*",
 		"icybee/module-nodes": "2.x"
 	},
 
