--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,12 @@ php:
   - 5.4
   - 5.5
   - 5.6
+  - hhvm
 
 matrix:
   allow_failures:
-    - php: 5.6
+    - php: hhvm
 
-install:
-  make vendor
+before_script:
+  - composer self-update
+  - composer install --no-interaction --prefer-source --dev
