--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
 	"require": {
 		"php": ">=5.5.0",
 		"icanboogie/module-installer": "^1.2.3",
+		"icanboogie/http": "^2.5.0",
 		"icybee/module-registry": "^3.0.0",
 		"icybee/module-nodes": "^3.0.0"
 	},
