--- a/composer.json
+++ b/composer.json
@@ -23,20 +23,26 @@
 	"prefer-stable": true,
 	"prefer-dist": true,
 	"require": {
-		"php": "^5.5|^7.0",
+		"php": ">=5.6",
 		"icanboogie/module-installer": "^1.2",
-		"icanboogie/http": "^2.5",
-		"icybee/module-registry": "^3.0",
-		"icybee/module-nodes": "^3.0"
+		"icybee/module-registry": "^4.0",
+		"icybee/module-nodes": "^4.0"
 	},
 	"require-dev": {
-		"icanboogie/icanboogie": "^3.0",
-		"icanboogie/bind-cldr": "^1.0",
-		"icanboogie/i18n": "^2.0"
+		"icanboogie/icanboogie": "^4.0",
+		"icybee/core": "^4.0"
 	},
 	"autoload": {
 		"psr-4": {
 			"Icybee\\Modules\\Files\\": "lib"
+		}
+	},
+	"autoload-dev": {
+		"classmap": [
+			"tests/Application.php"
+		],
+		"psr-4": {
+			"Icybee\\Modules\\Files\\": "tests/lib"
 		}
 	},
 	"scripts": {
