--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ before_script:
 
 script:
   - mkdir -p build/logs
-  - phpunit --coverage-clover ../build/logs/clover.xml
+  - vendor/bin/phpunit --coverage-clover ../build/logs/clover.xml
 
 after_success:
   - if [[ "$TRAVIS_PHP_VERSION" = "5.6" ]]; then php vendor/bin/coveralls -v; fi
