--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,8 @@
 	},
 	"require-dev": {
 		"icanboogie/icanboogie": "^4.0",
-		"icybee/core": "^4.0"
+		"icybee/core": "^4.0",
+		"phpunit/phpunit": "^5.6"
 	},
 	"autoload": {
 		"psr-4": {
