--- a/composer.json
+++ b/composer.json
@@ -25,12 +25,12 @@
 	"require": {
 		"php": ">=5.6",
 		"icanboogie/module-installer": "^1.2",
-		"icybee/module-registry": "^4.0",
-		"icybee/module-nodes": "^4.0"
+		"icybee/core": "^4.0",
+		"icybee/module-nodes": "^4.0",
+		"icybee/module-registry": "^4.0"
 	},
 	"require-dev": {
-		"icanboogie/icanboogie": "^4.0",
-		"icybee/core": "^4.0"
+		"icanboogie/icanboogie": "^4.0"
 	},
 	"autoload": {
 		"psr-4": {
